08/27/09 (Olaf)
Added a SPARQL query engine for the identifier based graph implementation. This was necessary because query processing was changed with the latest version of the ARQ engine so that query execution performance couldn't benefit from our ID-based BGP query evaluation (see commit from 05/24/09). The new engine is as fast as old ARQ with the ID-based BGP evaluation. Furthermore, the new engine enables a true integration of ID-based query evaluation in the Semantic Web Client Library which is impossible with the ID-based BGP evaluation approach due to the way ARQ executes queries.

08/26/09 (Olaf)
Changed the API of IdBasedGraph (replaced getId and getNode by getNodeDictionary).

Release 0.9.2
-------------

08/16/09 (Olaf)
Moved everything that is not Named Graphs specific from package 'de.fuberlin.wiwiss.ng4j.impl.idbased' to the packages 'de.fuberlin.wiwiss.jenaext' and 'de.fuberlin.wiwiss.jenaext.impl'.

08/14/09 (Olaf)
Added RDFa support to the Semantic Web Client Lib.

08/11/09 (Olaf)
Separated the configuration from the SemanticWebClient class.

07/30/09 (TimP) 
Fixed warnings from ant and Eclipse. Tagged v0_9_1_for_Jena_2_5_7

07/29/09 (TimP) 
Replaced references to sun.misc.Base64Encoder and sun.misc.Base64Decoder with commons-codec. 

06/23/09 (Olaf)
Applied patch 2806623: fixes a minor bug in the TRIG parser causing a NPE when reading default graphs such as in the example 3 at http://www4.wiwiss.fu-berlin.de/bizer/TriG/#example

Release 0.9.1
-------------

06/11/09 (Jennifer)
Commit, with a few minor modifications like the version #, the pom.xml file submitted by Tim Pizey in feature request "Bring Maven POM upto date - ID: 2801813".

06/10/09 (Jennifer)
Moved the failing SWP test to a separate file so that it can be excluded from Maven builds.

06/10/09 (Olaf)
Applied feature request 2801765 to build.xml to add the version number to builds and also remove the grammar.triql target since TriQL has been removed. 

06/10/09 (Jennifer)