@@ -237,7 +237,7 @@ public class SWPAuthorityImpl implements SWPAuthority
 				// We need code for publishing information about a RSA key here, using the SWP-2 and the XML-Sig vocabulary
 				graphP.add( new Triple( this.getID(), 
         								SWP.RSAKey, 
-        								Node.createLiteral( new String( Base64.encodeBase64Chunked( this.getPublicKey().getEncoded() ) ), 
+        								Node.createLiteral( new String( Base64.encodeBase64( this.getPublicKey().getEncoded() ) ), 
         													null, 
         													XSDDatatype.XSDbase64Binary) ) );
         	}
@@ -248,7 +248,7 @@ public class SWPAuthorityImpl implements SWPAuthority
         		try {
         			graphP.add( new Triple( this.getID(), 
 											SWP.X509Certificate, 
-											Node.createLiteral( new String( Base64.encodeBase64Chunked( this.getCertificate().getEncoded() ) ), 
+											Node.createLiteral( new String( Base64.encodeBase64( this.getCertificate().getEncoded() ) ), 
 																null, 
 																XSDDatatype.XSDbase64Binary ) ) );
         		} 
@@ -271,7 +271,7 @@ public class SWPAuthorityImpl implements SWPAuthority
 			try {
 				graphP.add( new Triple( this.getID(), 
 						SWP.X509Certificate, 
-						Node.createLiteral( new String( Base64.encodeBase64Chunked( this.getCertificate().getEncoded() ) ), 
+						Node.createLiteral( new String( Base64.encodeBase64( this.getCertificate().getEncoded() ) ), 
 											null, 
 											XSDDatatype.XSDbase64Binary ) ) );
 			} catch (AddDeniedException e) {
